--- a/main.ipynb
+++ b/main.ipynb
@@ -2,46 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pip in c:\\users\\julio\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (24.3.1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python.exe -m pip install --upgrade pip\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution ~oetry (c:\\Users\\julio\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~oetry (c:\\Users\\julio\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages)\n",
-      "ERROR: Ignored the following versions that require a different python version: 1.21.2 Requires-Python >=3.7,<3.11; 1.21.3 Requires-Python >=3.7,<3.11; 1.21.4 Requires-Python >=3.7,<3.11; 1.21.5 Requires-Python >=3.7,<3.11; 1.21.6 Requires-Python >=3.7,<3.11; 1.26.0 Requires-Python <3.13,>=3.9; 1.26.1 Requires-Python <3.13,>=3.9\n",
-      "ERROR: Could not find a version that satisfies the requirement tensorflow (from versions: none)\n",
-      "ERROR: No matching distribution found for tensorflow\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Instalando apenas as bibliotecas necessárias\n",
-    "!pip install numpy pandas pillow tensorflow -q\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -51,35 +12,223 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m \n",
+      "Cell \u001b[1;32mIn[10], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image  \u001b[38;5;66;03m# pillow\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# import data handling tools\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'PIL'"
      ]
     }
    ],
    "source": [
-    "from PIL import Image\n",
+    "# dependencies\n",
+    "\n",
+    "import os\n",
     "import itertools\n",
-    "import os \n",
+    "from PIL import Image  # pillow\n",
     "\n",
     "# import data handling tools\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "import numpy as np \n",
-    "sns.set_style('darkgrid')\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set_style(\"darkgrid\")\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
     "\n",
     "# import Deep learning Libraries\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.optimizers import Adam, Adamax\n",
-    "from tensowflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] O sistema não pode encontrar o caminho especificado: 'your/local/path'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m filepaths \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      3\u001b[0m labels \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 5\u001b[0m f \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_data_dir\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m fold \u001b[38;5;129;01min\u001b[39;00m f:\n\u001b[0;32m      8\u001b[0m     foldpath \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(train_data_dir, fold)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] O sistema não pode encontrar o caminho especificado: 'your/local/path'"
+     ]
+    }
+   ],
+   "source": [
+    "train_data_dir = \"your/local/path\"\n",
+    "filepaths = []\n",
+    "labels = []\n",
     "\n",
+    "f = os.listdir(train_data_dir)\n",
     "\n",
-    "\n"
+    "for fold in f:\n",
+    "    foldpath = os.path.join(train_data_dir, fold)\n",
+    "    filelist = os.listdir(foldpath)\n",
+    "    for file in filelist:\n",
+    "        fpath = os.path.join(foldpath, file)\n",
+    "        filepaths.append(fpath)\n",
+    "        labels.append(fold)\n",
+    "\n",
+    "Fseries = pd.Series(filepaths, name=\"filepaths\")\n",
+    "Lseries = pd.Series(labels, name=\"labels\")\n",
+    "\n",
+    "train_df = pd.concat([Fseries, Lseries], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] O sistema não pode encontrar o caminho especificado: 'your/local/path'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m filepaths \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      3\u001b[0m labels \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 5\u001b[0m f \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_data_dir\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m fold \u001b[38;5;129;01min\u001b[39;00m f:\n\u001b[0;32m      7\u001b[0m     foldpath \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(test_data_dir, fold)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] O sistema não pode encontrar o caminho especificado: 'your/local/path'"
+     ]
+    }
+   ],
+   "source": [
+    "test_data_dir = \"your/local/path\"\n",
+    "filepaths = []\n",
+    "labels = []\n",
+    "\n",
+    "f = os.listdir(test_data_dir)\n",
+    "for fold in f:\n",
+    "    foldpath = os.path.join(test_data_dir, fold)\n",
+    "    filelist = os.listdir(foldpath)\n",
+    "    for file in filelist:\n",
+    "        fpath = os.path.join(foldpath, file)\n",
+    "\n",
+    "        filepaths.append(fpath)\n",
+    "        labels.append(fold)\n",
+    "\n",
+    "Fseries = pd.Series(filepaths, name=\"filepaths\")\n",
+    "Lseries = pd.Series(labels, name=\"labels\")\n",
+    "ts_df = pd.concat([Fseries, Lseries], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_test_split' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m valid_df, test_df \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_test_split\u001b[49m(ts_df, train_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m123\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_test_split' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "valid_df, test_df = train_test_split(\n",
+    "    ts_df, train_size=0.5, shuffle=True, random_state=123\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ImageDataGenerator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m bath_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m16\u001b[39m\n\u001b[0;32m      2\u001b[0m img_size \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m224\u001b[39m, \u001b[38;5;241m224\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m tr_gen \u001b[38;5;241m=\u001b[39m \u001b[43mImageDataGenerator\u001b[49m()\n\u001b[0;32m      5\u001b[0m ts_gen \u001b[38;5;241m=\u001b[39m ImageDataGenerator()\n\u001b[0;32m      7\u001b[0m train_gen \u001b[38;5;241m=\u001b[39m tr_gen\u001b[38;5;241m.\u001b[39mflow_from_datagrame(train_df, \n\u001b[0;32m      8\u001b[0m                                        x_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfilepaths\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[0;32m      9\u001b[0m                                        y_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabels\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     14\u001b[0m                                        batch_size\u001b[38;5;241m=\u001b[39mbath_size\n\u001b[0;32m     15\u001b[0m                                        )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ImageDataGenerator' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 16\n",
+    "img_size = (224, 224)\n",
+    "\n",
+    "tr_gen = ImageDataGenerator()\n",
+    "ts_gen = ImageDataGenerator()\n",
+    "\n",
+    "train_gen = tr_gen.flow_from_datagrame(\n",
+    "    train_df,\n",
+    "    x_col=\"filepaths\",\n",
+    "    y_col=\"labels\",\n",
+    "    target_size=img_size,\n",
+    "    class_mode=\"categorical\",\n",
+    "    color_mode=\"rgb\",\n",
+    "    shuffle=True,\n",
+    "    batch_size=batch_size,\n",
+    ")\n",
+    "\n",
+    "valid_gen = ts_gen.flow_from_dataframe(\n",
+    "    valid_df,\n",
+    "    x_col=\"filepaths\",\n",
+    "    y_col=\"labels\",\n",
+    "    target_size=img_size,\n",
+    "    class_mode=\"categorical\",\n",
+    "    color_mode=\"rgb\",\n",
+    "    shuffle=True,\n",
+    "    batch_size=batch_size,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_gen = ts_gen.flow_from_dataframe(\n",
+    "    test_df,\n",
+    "    x_col=\"filepaths\",\n",
+    "    y_col=\"labels\",\n",
+    "    target_size=img_size,\n",
+    "    class_mode=\"categorical\",\n",
+    "    color_mode=\"rgb\",\n",
+    "    shuffle=False,\n",
+    "    batch_size=batch_size,\n",
+    ")\n",
+    "\n",
+    "g_dict = train_gen.class_indices  # defines dictionary {'class': index}\n",
+    "classes = list(\n",
+    "    g_dict.keys()\n",
+    ")  # defines list of dictionary's kays (classes), classes names : string\n",
+    "images, labels = next(train_gen)  # get a batch size samples from the generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "for i in range(16):\n",
+    "    plt.subplot(4, 4, i + 1)\n",
+    "    image = images[i] / 255  # scales data to range (0 - 255)\n",
+    "    plt.imshow(image)\n",
+    "    index = np.argmax(labels[i])  # get image index\n",
+    "    class_name = classes[index]  # get class of image\n",
+    "    plt.title(class_name, color=\"blue\", fontsize=12)\n",
+    "    plt.axis(\"off\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
