--- a/brain_tumor_cnn.ipynb
+++ b/brain_tumor_cnn.ipynb
@@ -2,22 +2,145 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pillow in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.13/lib/python3.13/site-packages (11.0.0)\n",
-      "Requirement already satisfied: scikit-learn in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.13/lib/python3.13/site-packages (1.6.0)\n",
-      "Requirement already satisfied: numpy>=1.19.5 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.13/lib/python3.13/site-packages (from scikit-learn) (2.2.0)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.13/lib/python3.13/site-packages (from scikit-learn) (1.14.1)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.13/lib/python3.13/site-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.13/lib/python3.13/site-packages (from scikit-learn) (3.5.0)\n",
-      "\u001b[31mERROR: Could not find a version that satisfies the requirement tensorflow (from versions: none)\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[31mERROR: No matching distribution found for tensorflow\u001b[0m\u001b[31m\n",
-      "\u001b[0m"
+      "Collecting pillow\n",
+      "  Downloading pillow-11.0.0-cp311-cp311-macosx_11_0_arm64.whl.metadata (9.1 kB)\n",
+      "Collecting scikit-learn\n",
+      "  Downloading scikit_learn-1.6.0-cp311-cp311-macosx_12_0_arm64.whl.metadata (31 kB)\n",
+      "Collecting numpy>=1.19.5 (from scikit-learn)\n",
+      "  Downloading numpy-2.2.0-cp311-cp311-macosx_14_0_arm64.whl.metadata (62 kB)\n",
+      "Collecting scipy>=1.6.0 (from scikit-learn)\n",
+      "  Downloading scipy-1.14.1-cp311-cp311-macosx_14_0_arm64.whl.metadata (60 kB)\n",
+      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
+      "  Using cached joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
+      "  Using cached threadpoolctl-3.5.0-py3-none-any.whl.metadata (13 kB)\n",
+      "Downloading pillow-11.0.0-cp311-cp311-macosx_11_0_arm64.whl (3.0 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "Downloading scikit_learn-1.6.0-cp311-cp311-macosx_12_0_arm64.whl (11.1 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.1/11.1 MB\u001b[0m \u001b[31m12.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m:01\u001b[0m\n",
+      "\u001b[?25hUsing cached joblib-1.4.2-py3-none-any.whl (301 kB)\n",
+      "Downloading numpy-2.2.0-cp311-cp311-macosx_14_0_arm64.whl (5.4 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.4/5.4 MB\u001b[0m \u001b[31m48.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "Downloading scipy-1.14.1-cp311-cp311-macosx_14_0_arm64.whl (23.1 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m23.1/23.1 MB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m:04\u001b[0m\n",
+      "\u001b[?25hUsing cached threadpoolctl-3.5.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: threadpoolctl, pillow, numpy, joblib, scipy, scikit-learn\n",
+      "Successfully installed joblib-1.4.2 numpy-2.2.0 pillow-11.0.0 scikit-learn-1.6.0 scipy-1.14.1 threadpoolctl-3.5.0\n",
+      "Collecting tensorflow\n",
+      "  Downloading tensorflow-2.18.0-cp311-cp311-macosx_12_0_arm64.whl.metadata (4.0 kB)\n",
+      "Collecting absl-py>=1.0.0 (from tensorflow)\n",
+      "  Downloading absl_py-2.1.0-py3-none-any.whl.metadata (2.3 kB)\n",
+      "Collecting astunparse>=1.6.0 (from tensorflow)\n",
+      "  Downloading astunparse-1.6.3-py2.py3-none-any.whl.metadata (4.4 kB)\n",
+      "Collecting flatbuffers>=24.3.25 (from tensorflow)\n",
+      "  Downloading flatbuffers-24.3.25-py2.py3-none-any.whl.metadata (850 bytes)\n",
+      "Collecting gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 (from tensorflow)\n",
+      "  Downloading gast-0.6.0-py3-none-any.whl.metadata (1.3 kB)\n",
+      "Collecting google-pasta>=0.1.1 (from tensorflow)\n",
+      "  Downloading google_pasta-0.2.0-py3-none-any.whl.metadata (814 bytes)\n",
+      "Collecting libclang>=13.0.0 (from tensorflow)\n",
+      "  Downloading libclang-18.1.1-1-py2.py3-none-macosx_11_0_arm64.whl.metadata (5.2 kB)\n",
+      "Collecting opt-einsum>=2.3.2 (from tensorflow)\n",
+      "  Downloading opt_einsum-3.4.0-py3-none-any.whl.metadata (6.3 kB)\n",
+      "Requirement already satisfied: packaging in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.11/lib/python3.11/site-packages (from tensorflow) (24.2)\n",
+      "Collecting protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<6.0.0dev,>=3.20.3 (from tensorflow)\n",
+      "  Downloading protobuf-5.29.1-cp38-abi3-macosx_10_9_universal2.whl.metadata (592 bytes)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.11/lib/python3.11/site-packages (from tensorflow) (2.32.3)\n",
+      "Requirement already satisfied: setuptools in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.11/lib/python3.11/site-packages (from tensorflow) (75.3.0)\n",
+      "Requirement already satisfied: six>=1.12.0 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.11/lib/python3.11/site-packages (from tensorflow) (1.17.0)\n",
+      "Collecting termcolor>=1.1.0 (from tensorflow)\n",
+      "  Downloading termcolor-2.5.0-py3-none-any.whl.metadata (6.1 kB)\n",
+      "Collecting typing-extensions>=3.6.6 (from tensorflow)\n",
+      "  Downloading typing_extensions-4.12.2-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Collecting wrapt>=1.11.0 (from tensorflow)\n",
+      "  Downloading wrapt-1.17.0-cp311-cp311-macosx_11_0_arm64.whl.metadata (6.4 kB)\n",
+      "Collecting grpcio<2.0,>=1.24.3 (from tensorflow)\n",
+      "  Downloading grpcio-1.68.1-cp311-cp311-macosx_10_9_universal2.whl.metadata (3.9 kB)\n",
+      "Collecting tensorboard<2.19,>=2.18 (from tensorflow)\n",
+      "  Downloading tensorboard-2.18.0-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Collecting keras>=3.5.0 (from tensorflow)\n",
+      "  Downloading keras-3.7.0-py3-none-any.whl.metadata (5.8 kB)\n",
+      "Collecting numpy<2.1.0,>=1.26.0 (from tensorflow)\n",
+      "  Downloading numpy-2.0.2-cp311-cp311-macosx_14_0_arm64.whl.metadata (60 kB)\n",
+      "Collecting h5py>=3.11.0 (from tensorflow)\n",
+      "  Downloading h5py-3.12.1-cp311-cp311-macosx_11_0_arm64.whl.metadata (2.5 kB)\n",
+      "Collecting ml-dtypes<0.5.0,>=0.4.0 (from tensorflow)\n",
+      "  Downloading ml_dtypes-0.4.1-cp311-cp311-macosx_10_9_universal2.whl.metadata (20 kB)\n",
+      "Collecting tensorflow-io-gcs-filesystem>=0.23.1 (from tensorflow)\n",
+      "  Downloading tensorflow_io_gcs_filesystem-0.37.1-cp311-cp311-macosx_12_0_arm64.whl.metadata (14 kB)\n",
+      "Collecting wheel<1.0,>=0.23.0 (from astunparse>=1.6.0->tensorflow)\n",
+      "  Using cached wheel-0.45.1-py3-none-any.whl.metadata (2.3 kB)\n",
+      "Collecting rich (from keras>=3.5.0->tensorflow)\n",
+      "  Downloading rich-13.9.4-py3-none-any.whl.metadata (18 kB)\n",
+      "Collecting namex (from keras>=3.5.0->tensorflow)\n",
+      "  Downloading namex-0.0.8-py3-none-any.whl.metadata (246 bytes)\n",
+      "Collecting optree (from keras>=3.5.0->tensorflow)\n",
+      "  Downloading optree-0.13.1-cp311-cp311-macosx_11_0_arm64.whl.metadata (47 kB)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.11/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorflow) (3.4.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.11/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorflow) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.11/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorflow) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.11/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorflow) (2024.12.14)\n",
+      "Collecting markdown>=2.6.8 (from tensorboard<2.19,>=2.18->tensorflow)\n",
+      "  Downloading Markdown-3.7-py3-none-any.whl.metadata (7.0 kB)\n",
+      "Collecting tensorboard-data-server<0.8.0,>=0.7.0 (from tensorboard<2.19,>=2.18->tensorflow)\n",
+      "  Downloading tensorboard_data_server-0.7.2-py3-none-any.whl.metadata (1.1 kB)\n",
+      "Collecting werkzeug>=1.0.1 (from tensorboard<2.19,>=2.18->tensorflow)\n",
+      "  Downloading werkzeug-3.1.3-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.11/lib/python3.11/site-packages (from werkzeug>=1.0.1->tensorboard<2.19,>=2.18->tensorflow) (2.1.5)\n",
+      "Collecting markdown-it-py>=2.2.0 (from rich->keras>=3.5.0->tensorflow)\n",
+      "  Downloading markdown_it_py-3.0.0-py3-none-any.whl.metadata (6.9 kB)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /Users/macintosh/Library/Caches/pypoetry/virtualenvs/braintumor-using-cnn-sca25Efj-py3.11/lib/python3.11/site-packages (from rich->keras>=3.5.0->tensorflow) (2.18.0)\n",
+      "Collecting mdurl~=0.1 (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow)\n",
+      "  Downloading mdurl-0.1.2-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Downloading tensorflow-2.18.0-cp311-cp311-macosx_12_0_arm64.whl (239.5 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m239.5/239.5 MB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:02\u001b[0m\n",
+      "Downloading absl_py-2.1.0-py3-none-any.whl (133 kB)\n",
+      "Downloading astunparse-1.6.3-py2.py3-none-any.whl (12 kB)\n",
+      "Downloading flatbuffers-24.3.25-py2.py3-none-any.whl (26 kB)\n",
+      "Downloading gast-0.6.0-py3-none-any.whl (21 kB)\n",
+      "Downloading google_pasta-0.2.0-py3-none-any.whl (57 kB)\n",
+      "Downloading grpcio-1.68.1-cp311-cp311-macosx_10_9_universal2.whl (11.2 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.2/11.2 MB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[36m0:00:01\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "Downloading h5py-3.12.1-cp311-cp311-macosx_11_0_arm64.whl (2.9 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.9/2.9 MB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m:01\u001b[0m\n",
+      "Downloading keras-3.7.0-py3-none-any.whl (1.2 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "Downloading libclang-18.1.1-1-py2.py3-none-macosx_11_0_arm64.whl (25.8 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m25.8/25.8 MB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "Downloading ml_dtypes-0.4.1-cp311-cp311-macosx_10_9_universal2.whl (397 kB)\n",
+      "Downloading numpy-2.0.2-cp311-cp311-macosx_14_0_arm64.whl (5.3 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.3/5.3 MB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "Downloading opt_einsum-3.4.0-py3-none-any.whl (71 kB)\n",
+      "Downloading protobuf-5.29.1-cp38-abi3-macosx_10_9_universal2.whl (417 kB)\n",
+      "Downloading tensorboard-2.18.0-py3-none-any.whl (5.5 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.5/5.5 MB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m:01\u001b[0m\n",
+      "Downloading tensorflow_io_gcs_filesystem-0.37.1-cp311-cp311-macosx_12_0_arm64.whl (3.5 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.5/3.5 MB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "Downloading termcolor-2.5.0-py3-none-any.whl (7.8 kB)\n",
+      "Downloading typing_extensions-4.12.2-py3-none-any.whl (37 kB)\n",
+      "Downloading wrapt-1.17.0-cp311-cp311-macosx_11_0_arm64.whl (38 kB)\n",
+      "Downloading Markdown-3.7-py3-none-any.whl (106 kB)\n",
+      "Downloading tensorboard_data_server-0.7.2-py3-none-any.whl (2.4 kB)\n",
+      "Downloading werkzeug-3.1.3-py3-none-any.whl (224 kB)\n",
+      "Using cached wheel-0.45.1-py3-none-any.whl (72 kB)\n",
+      "Downloading namex-0.0.8-py3-none-any.whl (5.8 kB)\n",
+      "Downloading optree-0.13.1-cp311-cp311-macosx_11_0_arm64.whl (318 kB)\n",
+      "Downloading rich-13.9.4-py3-none-any.whl (242 kB)\n",
+      "Downloading markdown_it_py-3.0.0-py3-none-any.whl (87 kB)\n",
+      "Downloading mdurl-0.1.2-py3-none-any.whl (10.0 kB)\n",
+      "Installing collected packages: namex, libclang, flatbuffers, wrapt, wheel, werkzeug, typing-extensions, termcolor, tensorflow-io-gcs-filesystem, tensorboard-data-server, protobuf, opt-einsum, numpy, mdurl, markdown, grpcio, google-pasta, gast, absl-py, tensorboard, optree, ml-dtypes, markdown-it-py, h5py, astunparse, rich, keras, tensorflow\n",
+      "  Attempting uninstall: numpy\n",
+      "    Found existing installation: numpy 2.2.0\n",
+      "    Uninstalling numpy-2.2.0:\n",
+      "      Successfully uninstalled numpy-2.2.0\n",
+      "Successfully installed absl-py-2.1.0 astunparse-1.6.3 flatbuffers-24.3.25 gast-0.6.0 google-pasta-0.2.0 grpcio-1.68.1 h5py-3.12.1 keras-3.7.0 libclang-18.1.1 markdown-3.7 markdown-it-py-3.0.0 mdurl-0.1.2 ml-dtypes-0.4.1 namex-0.0.8 numpy-2.0.2 opt-einsum-3.4.0 optree-0.13.1 protobuf-5.29.1 rich-13.9.4 tensorboard-2.18.0 tensorboard-data-server-0.7.2 tensorflow-2.18.0 tensorflow-io-gcs-filesystem-0.37.1 termcolor-2.5.0 typing-extensions-4.12.2 werkzeug-3.1.3 wheel-0.45.1 wrapt-1.17.0\n"
      ]
     }
    ],
@@ -820,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
